@@ -1,3 +1,8 @@
+ * Adding checks when 'MDRequireHttps' is used. It is considered an error when 'MDPortMap 443:-'
+   is used - which negates that a https: port exists. Also, a warning is logged if no 
+   VirtualHost can be found for a Managed Domain that has port 443 (or the mapped one) in
+   its address list.
+
 v0.9.4
 ----------------------------------------------------------------------------------------------------
  * New directive 'MDRequireHttps' for redirecting http: traffic to a Managed Domain, permanently
